--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,11 @@
 
+v0.3.0:
+
+  * support for Python 3, via distribute and the "use_2to3" flag
+
+v0.2.1:
+
+  * support for optional Choice fields, thanks to Jose Orlando Pereira
 
 v0.2.0:
 
