--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,10 @@
 
+
+v0.3.1:
+
+  * support for empty-only Boolean fields, where presence of the attribute
+    or tag indicates True and absence indicates False.
+
 v0.3.0:
 
   * support for Python 3, via distribute and the "use_2to3" flag
