--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,8 +2,11 @@
 
 v0.3.1:
 
+  * more careful management of namespaces in fields.XmlNode.
   * support for empty-only Boolean fields, where presence of the attribute
     or tag indicates True and absence indicates False.
+  * support for rendering fields whose attrname or tagname is a tuple
+    (namespace,localName)
 
 v0.3.0:
 
