--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,8 @@
 
+v0.3.5:
+
+  * generate fewer redundant namespace prefixes; thanks José Orlando Pereira.
+
 v0.3.4:
 
  * allow Model subclasses to inherit meta attributes from their base classes.
@@ -9,7 +13,7 @@ v0.3.4:
 
 v0.3.3:
 
-  * Dict field type; thanks to Alexander Vladimirov
+  * Dict field type; thanks to Alexander Vladimirov.
 
 v0.3.2:
 
