--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,8 @@
 
+v0.3.6
+
+  * strict type checking for Model fields; thanks Alexander Vladimirov.
+
 v0.3.5:
 
   * generate fewer redundant namespace prefixes; thanks José Orlando Pereira.
