--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,8 @@ v0.4.0
       * Model.render no longer takes the "nsmap" argument
       * Fields.Model no longer calls Model.render, so reimplementing it in a
         subclass probably won't work; re-implement Model._render instead.
+  * fields.Model:  when specifying the model class as a string, search
+    first by tagname and then by classname.
 
 v0.3.7
 
