--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,12 +2,15 @@
 v0.4.0
 
   * Some API changes to allow generator-based rendering:
-      * Model.irender() is a generator version of Model.render
-      * Model.render no longer takes the "nsmap" argument
-      * Fields.Model no longer calls Model.render, so reimplementing it in a
-        subclass probably won't work; re-implement Model._render instead.
+      * Model.irender() is a generator version of Model.render()
+      * Model.render() no longer takes the "nsmap" argument
+      * Fields.Model no longer calls Model.render(), so reimplementing it in
+        a subclass probably won't work; reimplement Model._render() instead.
   * fields.Model:  when specifying the model class as a string, search
     first by tagname and then by classname.
+  * fields.Value:  allow a tagname of "." to parse a value directly out of
+    the contents of the parent node.
+
 
 v0.3.7
 
