fields.List: accept a generator, consume it only during rendering

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,8 +4,9 @@ v0.4.0
   * Some API changes to allow generator-based rendering:
       * Model.irender() is a generator version of Model.render()
       * Model.render() no longer takes the "nsmap" argument
-      * Fields.Model no longer calls Model.render(), so reimplementing it in
+      * fields.Model no longer calls Model.render(), so reimplementing it in
         a subclass probably won't work; reimplement Model._render() instead.
+      * fields.List accepts a generator, and won't cosume it until rendered.
   * fields.Model:  when specifying the model class as a string, search
     first by tagname and then by classname.
   * fields.Value:  allow a tagname of "." to parse a value directly out of
