--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@
 v0.5.0
 
   * Implemented a basic project website, with tutorial and API docs.
+  * Implement Model.render(pretty=True) for pretty-printed XML output.
   * Clean up and clarify handling of wrapper tags for List/Dict fields.
     When the "tagname" property is specified:
       * If the field is required then the wrapper tag is required,
